word wrapping fix in dj's page

--- a/public/stylesheets/coke_messenger/messenger.css
+++ b/public/stylesheets/coke_messenger/messenger.css
@@ -95,7 +95,7 @@ a.link_grisb:hover{text-decoration:underline;}
 .ult_mixes{}
 .ult_mixes li{text-align:left;border-bottom:1px solid #ededed;padding-top:2px;width:100%;}
 .avatar{float:left;width:47px;height:47px;}
-.datos{width:175px;padding:8px 0 8px 10px;float:left;}
+.datos{width:170px;padding:8px 0 8px 10px;float:left;}
 h3{font-size:13px;color:#e40015;margin-bottom:8px;}
 h3 a{font-size:13px;}
 p{font-size:11px;color:#636363;}
@@ -131,7 +131,7 @@ p a{font-size:11px;padding-bottom:1px;}
 .djs{}
 .djs li{display:block;text-align:left;border-bottom:1px solid #ededed;padding:2px 15px 0 10px;}
 .djs li h3{margin-bottom:3px;}
-.num_mixes{font-size:11px;color:#999;display:block;width:50px;float:left;margin-top:15px;}
+.num_mixes{font-size:11px;color:#999;display:block;width:65px;float:left;margin-top:15px;}
 .num_mixes strong{font-size:13px;color:#636363;font-weight:bold;}
 
 /* amigos
